--- a/app/src/main/res/layout/list_orders.xml
+++ b/app/src/main/res/layout/list_orders.xml
@@ -3,20 +3,12 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imgIdProduct"
-        android:layout_width="150px"
-        android:layout_height="150px"
-        android:layout_alignParentLeft="true"
-        android:contentDescription="@string/app_name"
-        android:layout_marginRight="10px"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView
-            android:text="Nombre"
+            android:text="Estado"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"/>
@@ -26,12 +18,12 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"/>
         <TextView
-            android:text="Precio"
+            android:text="Creado en:"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"/>
         <TextView
-            android:id="@+id/tvPrice"
+            android:id="@+id/tvCreated"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"/>
