--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     tools:context="mx.edu.itcelaya.ecommerceproducts.MainActivity">
 
     <ListView
-        android:id="@+id/listProductos"
+        android:id="@+id/listOrdenes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
