--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -7,10 +7,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="mx.edu.itcelaya.ecommerceproducts.Rewiews">
+    tools:context="mx.edu.itcelaya.ecommerceproducts.Products">
 
     <ListView
-        android:id="@+id/listReviews"
+        android:id="@+id/listProducts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
